--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest --passWithNoTests"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@reduxjs/toolkit": "1.9.5",
     "axios": "0.27.2",
     "classnames": "2.3.2",
@@ -21,7 +22,8 @@
     "react-helmet-async": "1.3.0",
     "react-redux": "8.1.1",
     "react-router-dom": "6.14.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "9.1.3",
+    "swiper": "10.3.1"
   },
   "devDependencies": {
     "@jedmao/redux-mock-store": "3.0.5",
