--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react-refresh": "0.4.1",
     "faker": "5.5.3",
     "jsdom": "22.1.0",
+    "prettier": "3.0.3",
     "typescript": "5.0.4",
     "vite": "4.3.9",
     "vitest": "0.32.2"
